--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,3 @@
-body {
-  font-family: "Roboto", sans-serif;
-  color: #434455;
-  font-style: normal;
-}
-
 :root {
   --back-color: #2e2f42;
   --white: #ffffff;
@@ -14,6 +8,24 @@ body {
   --light-white: #e7e9fc;
 }
 
+body {
+  font-family: "Roboto", sans-serif;
+  color: #434455;
+  font-style: normal;
+}
+
+p,
+h1,
+h2,
+h3 {
+  margin: 0;
+}
+
+ul {
+  margin: 0;
+  padding-left: 0;
+}
+
 .link {
   text-decoration: none;
 }
@@ -22,9 +34,42 @@ body {
   list-style: none;
 }
 
+img {
+  display: block;
+}
+
+.container {
+  width: 1158px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+}
+
+.section {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
 /*------------ HEADER------------- */
 .header {
   background: var(--white);
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
+.header-list {
+  display: flex;
+  gap: 40px;
+}
+
+.nav {
+  display: flex;
+  align-items: center;
+  margin-right: auto;
+}
+
+.header-container {
+  display: flex;
 }
 
 .header-logo {
@@ -37,6 +82,10 @@ body {
   text-transform: uppercase;
   color: var(--blue);
   text-decoration: none;
+}
+
+.header-logo {
+  margin-right: 76px;
 }
 
 .header-logo span {
@@ -63,6 +112,11 @@ body {
   font-style: normal;
 }
 
+.address-list {
+  display: flex;
+  gap: 40px;
+}
+
 .header-address:hover,
 .header-address:focus {
   color: var(--light-blue);
@@ -85,9 +139,15 @@ body {
 /*--------------- PAGE ----------- */
 .page {
   background: var(--back-color);
+  padding-top: 188px;
+  padding-bottom: 188px;
 }
 
 .page-title {
+  width: 496px;
+  height: 120px;
+  margin: 0 auto;
+  margin-bottom: 48px;
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
@@ -108,12 +168,21 @@ body {
   cursor: pointer;
 }
 
+.page-btn {
+  display: block;
+  margin: 0 auto;
+  padding: 16px 32px;
+}
+
 .page-btn:hover,
 .page-btn:focus {
   background-color: var(--light-blue);
 }
 
+/*---------------- CONTENT---------------- */
+
 .content-title {
+  width: 264px;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -122,11 +191,19 @@ body {
 }
 
 .content-text {
+  width: 264px;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--light-black);
 }
+
+.content {
+  display: flex;
+  gap: 24px;
+  margin-top: 8px;
+}
+
 /*--------------- img--------------------- */
 
 .img-title {
@@ -139,13 +216,33 @@ body {
   color: var(--back-color);
 }
 
+.img-title {
+  margin-bottom: 72px;
+}
+
+.foto {
+  width: calc(100% - 48px) / 3;
+  display: flex;
+  gap: 24px;
+}
+
+.image {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 /*------------------ TEAM--------------- */
 
 .team {
-  background: var(--black-white);
+  background: #f4f4fd;
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 .team-heading {
+  width: 162px;
+  margin: 0 auto;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
@@ -155,28 +252,40 @@ body {
   color: var(--back-color);
 }
 
+.team-list {
+  padding-top: 72px;
+  gap: 24px;
+  display: flex;
+}
+
 .list-color {
   background-color: var(--white);
+  border-radius: 0px 0px 4px 4px;
 }
 
 .team-title {
+  margin-top: 32px;
+  margin-bottom: 8px;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
-  text-align: left;
+  text-align: center;
   letter-spacing: 0.02em;
   color: var(--back-color);
 }
 .team-text {
+  margin-bottom: 32px;
   font-size: 16px;
   line-height: 1.5;
-  text-align: left;
+  text-align: center;
   letter-spacing: 0.02em;
   color: var(--light-black);
 }
 /*------------- footer ------------*/
 .footer {
   background: var(--back-color);
+  padding-top: 101.5px;
+  padding-bottom: 100px;
 }
 
 .footer-logo {
@@ -184,7 +293,6 @@ body {
   font-weight: 800;
   font-size: 18px;
   line-height: 1.17;
-  align-items: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--blue);
@@ -199,8 +307,12 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--light-white);
-  text-align: left;
+  padding-top: 17.5px;
+  max-width: 264px;
 }
+
+/*--------------- PORTFOLIO------------- */
+
 .imagess {
   font-size: 36px;
   line-height: 1.11;
@@ -210,29 +322,55 @@ body {
   color: var(--back-color);
 }
 
-/*--------------- PORTFOLIO------------- */
-
 .btn {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
-  align-items: center;
   text-align: center;
   letter-spacing: 0.04em;
   color: var(--blue);
   background-color: var(--black-white);
   cursor: pointer;
 }
+
+.btn {
+  padding: 12px 24px;
+  border: 1px solid, var(--light-white);
+  border-radius: 4px;
+}
+
 .btn:hover,
 .btn:focus {
   color: var(--white);
   background-color: var(--light-blue);
 }
 
+.button-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  padding-top: 120px;
+}
+
 /*------------ IMG-BODY---------- */
 
+.button-img {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 72px 0 120px;
+  gap: 48px 24px;
+}
+
+.img-text {
+  border: 1px solid var(--light-white);
+  width: 360px;
+}
+
 .img-body {
+  margin-top: 32px;
+  margin-bottom: 8px;
+  margin-left: 16px;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -241,6 +379,8 @@ body {
 }
 
 .img-parag {
+  margin-bottom: 32px;
+  margin-left: 16px;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
